[project]
name = "bluesky-crawler"
version = "0.1.0"
description = "bluesky crawler"
authors = [
    { name = "shift" }
]
dependencies = [
    "atproto>=0.0.65",
    "coverage>=7.13.4",
    "freezegun>=1.5.5",
    "httpx>=0.28.1",
    "isort>=7.0.0",
    "mock>=5.2.0",
    "orjson>=3.11.7",
    "pycodestyle>=2.14.0",
    "ruff>=0.15.0",
    "sqlalchemy>=2.0.46",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
line_length = 119
multi_line_output = 9

[tool.ruff]
exclude = [
    "__pycache__",
    ".coveragerc",
    ".git",
    ".venv",
    "venv",
]
line-length = 119

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "F"]
ignore = ["F401", "F541", "F841"]
preview = true

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
unittest = "python -m unittest"
cover = {chain = ["coverage run --source . -m unittest discover", "coverage html"]}
copy_to_run = "./copy_to_run.bat"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bluesky_crawler"]
